--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>Hyperbone • TodoMVC</title>
 		<link rel="stylesheet" href="bower_components/todomvc-common/base.css">
+		<style>.hyperbone-view { display: none; }</style>
 	</head>
 	<body>
-		<section id="todoapp">
+		
+		<section id="todoapp" class="hyperbone-view">
 			<header id="header">
 				<h1>todos</h1>
 				<input id="new-todo" hb-bind="new-task" placeholder="What needs to be done?" autofocus>
@@ -26,7 +28,7 @@
 					</li>
 				</ul>
 			</section>
-			<footer id="footer">
+			<footer if="has-items" id="footer">
 				<span id="todo-count"><strong>{{remaining}}</strong> {{pluralise(model.get('remaining'), 'item')}} left</span>
 				<ul id="filters" hb-with="filters">
 					<li>
@@ -41,7 +43,7 @@
 			<p>Written by <a href="https://github.com/CharlotteGore">Charlotte Gore</a></p>
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
-		<script src="build/build.min.js"></script>
+		<script src="build/build.js"></script>
 		<script>require('todomvc-hyperbone')</script>
 	</body>
 </html>
