Bit of a refactor. Still got demonstrate routing and local storage to do though

--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
 		<script src="build/build.js"></script>
-		<script>require('todomvc-hyperbone')</script>
+		<script>new (require('todomvc-hyperbone'))</script>
 	</body>
 </html>
