--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>Hyperbone • TodoMVC</title>
 		<link rel="stylesheet" href="bower_components/todomvc-common/base.css">
-		<style>.hyperbone-view { display: none; }</style>
+		<style>.hyperbone-view { visibility : hidden;}</style>
 	</head>
 	<body>
 		
@@ -43,6 +43,6 @@
 			<p>Written by <a href="https://github.com/CharlotteGore">Charlotte Gore</a></p>
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
-		<script src="todomvc.min.js"></script>
+		<script src="build/todomvc.js"></script>
 	</body>
 </html>
